<resources>
    <string name="app_name">CashBucket</string>

    <!-- Hint -->
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="hint_name">personal name</string>
    <string name="hint_value">value</string>
    <string name="hint_balance">balance</string>
    <string name="hint_day">day</string>
    <string name="hint_desc">description</string>
    <string name="hint_wallet_value">current amount of money</string>

    <!-- Button -->
    <string name="button_signup">Sign up</string>
    <string name="button_login">Login</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_calendar">Calendar</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="button_no">No</string>
    <string name="button_yes">Yes</string>

    <!-- Toast -->
    <string name="toast_name_field_empty">The <i>personal name</i> field cannot be empty!</string>
    <string name="toast_username_field_empty">The <i>username</i> field cannot be empty!</string>
    <string name="toast_password_field_empty">The <i>password</i> field cannot be empty!</string>
    <string name="toast_account_created_successfully">Account created successfully!</string>
    <string name="toast_something_went_wrong">Sorry, something went wrong!</string>
    <string name="toast_no_user_id">Something went wrong. There is no <i>userId</i>!!</string>
    <string name="toast_balance_field_empty">The <i>balance</i> field cannot be empty!</string>
    <string name="toast_value_field_empty">The <i>value</i> field cannot be empty!</string>
    <string name="toast_day_field_empty">The <i>day</i> field cannot be empty!</string>
    <string name="toast_bank_account_created_successfully">Bank Account created successfully!</string>
    <string name="toast_login_failure"><i>username</i> or <i>password</i> is invalid.</string>
    <string name="toast_login_success">Welcome!</string>
    <string name="toast_date_field_empty">You have to set a date!</string>
    <string name="toast_wallet_value_empty">You must enter a value!</string>
    <string name="toast_wallet_created_successfully">Wallet created successfully!</string>
    <string name="toast_no_changes_were_made">No changes were made.</string>
    <string name="toast_changes_successful">The changes were successful!</string>
    <string name="toast_refresh_page">The item was removed. Please, refresh the page!</string>
    <string name="toast_cash_movement_not_removed">Something went wrong. The item was not removed.</string>

    <!-- Cash Movement Type -->
    <string-array name="list_cash_movement_types">
        <item>Withdrawal</item>
        <item>Normal Expense</item>
        <item>Debit</item>
        <item>Deposit</item>
    </string-array>

    <!-- Cash Movement Images -->
    <array name="cash_movement_images">
        <item>@drawable/withdrawal</item>
        <item>@drawable/normal_expense</item>
        <item>@drawable/debit</item>
        <item>@drawable/deposit</item>
    </array>

    <!-- TextView -->
    <string name="text_bank_account">Bank Account:</string>
    <string name="text_wallet">Wallet: </string>
    <string name="text_bank_account_title">Bank Account</string>
    <string name="text_wallet_title">Wallet</string>
    <string name="text_balance">Balance</string>
    <string name="text_day">Day</string>
    <string name="text_value">Value</string>
    <string name="text_account_title">Account</string>
    <string name="text_user_settings">User Settings</string>

    <!-- CheckBox -->
    <string name="check_auto_deposit">Auto-deposit</string>
    <string name="check_remember_me">Remember me</string>
    <string name="check_auto_login">Auto login</string>
    <string name="check_auto_deposit_notification">Auto Deposit Notification</string>

    <!-- Settings -->
    <string-array name="settings_options">
        <item>Account</item>
        <item>Bank Account Settings</item>
        <item>Wallet Settings</item>
        <item>Notifications</item>
    </string-array>

    <!-- Dialog -->
    <string name="dialog_deactivate_auto_deposit">Are you sure you want to deactivate the auto-deposit?</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_confirm_changes">Are you sure you want to apply the changes?</string>
    <string name="dialog_delete_cash_movement">Do you want to delete this item?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!-- Notification -->
    <string name="notification_new_deposit">New Deposit</string>

    <!-- Months -->
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- Statistics List -->
    <string-array name="statistics_list">
        <item>Chart</item>
        <item>Monthly Report</item>
    </string-array>

</resources>
