<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_account_title"
            android:textSize="14pt"/>

        <CheckBox
            android:id="@+id/activityMA_checkAutoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_auto_login"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_user_settings"
            android:textSize="14pt"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/activityMA_etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textStyle="italic"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/activityMA_etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:textStyle="italic"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/activityMA_btConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"
            android:layout_marginTop="25dp"
            android:background="@drawable/custom_button_states"
            android:textColor="@drawable/button_text_color"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/activityMA_btCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</RelativeLayout>