<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_bank_account_title"
            android:textSize="12pt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_balance"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/activityMBA_etBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_balance"/>

        <CheckBox
            android:id="@+id/activityMBA_checkAutoDeposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_auto_deposit"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/activityMBA_containerTitles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_value"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_day"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/activityMBA_containerValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/activityMBA_etAutoDepositValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

            <EditText
                android:id="@+id/activityMBA_etDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>


        <Button
            android:id="@+id/activityMBA_btConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/activityMBA_btCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:layout_marginTop="10dp"/>

    </LinearLayout>


</RelativeLayout>