<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activitySignup_etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"/>

        <EditText
            android:id="@+id/activitySignup_etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/activitySignup_etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/activitySignup_btConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/button_confirm"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button_states"
            android:textColor="@drawable/button_text_color"
            android:textAllCaps="false"/>


    </LinearLayout>

</RelativeLayout>