<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/activityNewCM_etValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_value"
            android:textStyle="italic"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/activityNewCM_txtDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/activityNewCM_btCalendar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_calendar"
                android:layout_weight="2"/>

        </LinearLayout>

        <Spinner
            android:id="@+id/activityNewCM_spinType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/activityNewCM_btConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/activityNewCM_btCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

</RelativeLayout>